# launchre

./: Cargo.toml  README.md  meson.build
archlinux/: PKGBUILD
src/: applications.rs  main.rs
ui/: appwindow.slint
