[package]
name = "utena"
version = "0.4.9"
authors = ["ShootingStarDragons <ShootingStarDragons@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.1"
gio = "0.19.2"
regex = "1"
once_cell = "1.19.0"
anyhow = "1.0.80"
zbus = "4.1.2"
deunicode = "1.4.3"
xdg = "2.5.2"

[build-dependencies]
slint-build = "1.4"
