[package]
name = "utena"
version = "0.4.12"
authors = ["ShootingStarDragons <ShootingStarDragons@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
gio = "0.20.1"
regex = "1"
once_cell = "1.19.0"
anyhow = "1.0.89"
zbus = "4.4.0"
deunicode = "1.6.0"
xdg = "2.5.2"

[build-dependencies]
slint-build = "1.8"
